--- a/natours/package.json
+++ b/natours/package.json
@@ -4,12 +4,21 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "compile:sass": "node-sass sass/main.scss css/style.css -w"
+        "watch:sass": "node-sass sass/main.scss css/style.css -w",
+        "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+        "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+        "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+        "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+        "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
     },
     "keywords": [],
     "author": "Gabriel Hahn Schaeffer <gabriel_hahn@hotmail.com>",
     "license": "MIT",
     "devDependencies": {
-        "node-sass": "^4.11.0"
+        "autoprefixer": "^9.6.1",
+        "concat": "^1.0.3",
+        "node-sass": "^4.11.0",
+        "npm-run-all": "^4.1.5",
+        "postcss-cli": "^6.1.3"
     }
 }
